fix: projects overflow fix

--- a/src/components/projects/styles.css
+++ b/src/components/projects/styles.css
@@ -94,9 +94,9 @@
   .tab-content > .active {
     display: flex;
     align-content: center;
-    justify-content: center;
     min-height: 70vh;
     align-items: center;
+    overflow: scroll;
   }
 }
 
